--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Website created by Aaron Hurtado</p>
+                <p>Copyright &copy; 2025 - Website created by Aaron Hurtado. All rights reserved.</p>
             </div>
         </footer>
 
