Optimized website design for Mobile devices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, experience, and projects">
     <meta name="keywords" content="Aaron Hurtado, Software Engineer, Web Development, Portfolio, Resume">
     <meta name="author" content="Aaron Hurtado">
@@ -60,13 +62,6 @@
             <li><a href="#experience" class="scroll-link">Experience</a></li>
             <li><a href="#projects" class="scroll-link">Projects</a></li>
             <li><a href="#footer" class="scroll-link">Contact</a></li>
-
-            <!-- <li onClick="scrollToId('about_me')">About Me</li>
-            <li onClick="scrollToId('education')">Education</li>
-            <li onClick="scrollToId('experience')">Experience</li>
-            <li onClick="scrollToId('projects')">Projects</li>
-            <li onClick="scrollToId('footer')">Contact</li> -->
-            
         </ul>
     </nav>
 
@@ -193,7 +188,7 @@
 
         <section class="experience" id="experience">
             <div class="container">
-                <h1>Professional Experience</h1>
+                <h1 id="experience_header">Professional Experience</h1>
                 <h2>Centene Corporation</h2>
 
                 <div class="heading-container">
