--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Copyright &copy; 2025 - Website created by Aaron Hurtado. All rights reserved.</p>
+                <p>Website created by Aaron Hurtado. All rights reserved.</p>
+                <p>Copyright &copy; 2025</p>
             </div>
         </footer>
 
