--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <section class="education" id="education">
             <div class="container">
                 <h1>Education</h1>
-                <h2 id="UCSD">University of California, San Diego</h2>
-                <div class="image-container" id="UCSD_pics">
+                <h2 id="UCSD-header">University of California, San Diego</h2>
+                <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank">
                         <img src="./images/ucsd_seal.png" alt="UCSD Seal" />
                     </a>
@@ -188,7 +188,7 @@
 
         <section class="experience" id="experience">
             <div class="container">
-                <h1 id="experience_header">Professional Experience</h1>
+                <h1 class="long-header">Professional Experience</h1>
                 <h2>Centene Corporation</h2>
 
                 <div class="heading-container">
@@ -303,7 +303,7 @@
 
         <section class="projects" id="projects">
             <div class="container">
-                <h1>Personal Projects</h1>
+                <h1 class="long-header">Personal Projects</h1>
                 <h2>Cryptocurrency Trading Bot</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
