Updated Github link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Home
                 </li>
             </a>
-            <a href="https://github.com/aahurtado" target="_blank">
+            <a href="https://github.com/aahurtado/my_website" target="_blank">
                 <li>
                     <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager"/>
                     GitHub
@@ -363,7 +363,7 @@
                 
                 <div class="footer-content">
                     <h4>Links</h4>
-                    <p><a href="https://github.com/aahurtado" target="_blank">GitHub</a></p>
+                    <p><a href="https://github.com/aahurtado/my_website" target="_blank">GitHub</a></p>
                     <p><a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">LinkedIn</a></p>
                     <p><a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">Resume</a></p>
                 </div>
