Added <header> element

--- a/index.html
+++ b/index.html
@@ -21,37 +21,39 @@
 </head>
 
 <body>
-    <nav class="topbar">
-        <ul class="nav-links left">
-            <a href="#">
-                <li>
-                    <img src="./images/house1.png" alt="Home" class="nav-icon" loading="eager"/>
-                    Home
-                </li>
-            </a>
-            <a href="https://github.com/aahurtado/my_website" target="_blank">
-                <li>
-                    <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager"/>
-                    GitHub
-                </li>
-            </a>
-        </ul> 
+    <header>
+        <nav class="topbar">
+            <ul class="nav-links left">
+                <a href="#">
+                    <li>
+                        <img src="./images/house1.png" alt="Home" class="nav-icon" loading="eager"/>
+                        Home
+                    </li>
+                </a>
+                <a href="https://github.com/aahurtado/my_website" target="_blank">
+                    <li>
+                        <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager"/>
+                        GitHub
+                    </li>
+                </a>
+            </ul> 
 
-        <ul class="nav-links right">
-            <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
-                <li>
-                    <img src="./images/cv.png" alt="Resume" class="nav-icon" loading="eager"/>
-                    Resume
-                </li>
-            </a>
-            <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
-                <li>
-                    <img src="./images/linkedin.png" alt="LinkedIn" class="nav-icon" loading="eager"/>
-                    Linkedin
-                </li>
-            </a>
-        </ul> 
-    </nav>
+            <ul class="nav-links right">
+                <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
+                    <li>
+                        <img src="./images/cv.png" alt="Resume" class="nav-icon" loading="eager"/>
+                        Resume
+                    </li>
+                </a>
+                <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
+                    <li>
+                        <img src="./images/linkedin.png" alt="LinkedIn" class="nav-icon" loading="eager"/>
+                        Linkedin
+                    </li>
+                </a>
+            </ul> 
+        </nav>
+    </header>
 
 
     <nav class="sidebar">
@@ -146,6 +148,7 @@
             </div>
         </section>
 
+
         <section class="education" id="education">
             <div class="container">
                 <h1>Education</h1>
@@ -185,6 +188,7 @@
                 </div>
             </div>
         </section>
+
 
         <section class="experience" id="experience">
             <div class="container">
@@ -244,6 +248,7 @@
 
                 <div class="section-divider"></div>
 
+
                 <h2>Epsilon Systems Solutions, Inc.</h2>
 
                 <div class="heading-container">
@@ -287,6 +292,7 @@
                         <img src="./images/raytheon.jfif" alt="Raytheon Logo" />
                     </a>
                 </div>
+
                 <div class="image-container">
                     <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">
                         <img src="./images/navy_ship.jpg" alt="Navy Ship" />
@@ -300,6 +306,7 @@
 
             </div>
         </section>
+
 
         <section class="projects" id="projects">
             <div class="container">
@@ -341,6 +348,7 @@
                 <div class="image-container">
                     <img src="./images/ps5.png" alt="Playstation 5" />
                 </div>
+
                 <div class="image-container">
                     <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
                         <img src="./images/phoenix_bot.png" alt="Phoenix Bot" />
@@ -350,6 +358,7 @@
 
             </div>
         </section>
+
 
         <footer id="footer">
             <div class="footer-container">
@@ -374,6 +383,7 @@
                     <p>Phone: (408) 284-9146</p>
                 </div>
             </div>
+
             <div class="footer-bottom">
                 <p>Website created by Aaron Hurtado. All rights reserved.</p>
                 <p>Copyright &copy; 2025</p>
