--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </p> -->
 
                 <div class="image-container">
-                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable_image"/>
+                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image"/>
                 </div>
             </div>
         </section>
@@ -157,7 +157,7 @@
                     <a href="https://www.ucsd.edu/" target="_blank">
                         <img src="./images/ucsd_seal.png" alt="UCSD Seal" />
                     </a>
-                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable_image"/>
+                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image"/>
                 </div>
 
                 <div class="heading-container">
@@ -237,7 +237,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable_image" />
+                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" />
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
@@ -328,7 +328,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable_image" />
+                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image" />
                         <figcaption>My Freqtrade Results</figcaption>
                     </figure>
                 </div>
