Added new section to Projects

--- a/index.html
+++ b/index.html
@@ -380,6 +380,28 @@
                     <img src="./images/gamestop.jpg" alt="GameStop" />
                 </div>
 
+
+                <div class="section-divider"></div>
+
+
+                <h2>This Website</h2>
+
+                <div class="text-container large-gap">
+                    <p>
+                        This website was created by me to showcase my projects and skills. All of the code for this website is available to look at on my GitHub account.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
+                    </p>
+                </div>
+
+                <div class="image-container">
+                    <a href="https://github.com/aahurtado/my_website" target="_blank">
+                        <img src="./images/my_website_github.png" alt="Picture of this website" />
+                    </a>
+                </div>
+
+
             </div>
         </section>
 
