--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
             <div class="footer-bottom">
                 <p>Website created by Aaron Hurtado. All rights reserved.</p>
-                <p>Copyright &copy; 2025</p>
+                <p id="copyright">Copyright &copy; 2025</p>
             </div>
         </footer>
 
