--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     </li>
                 </a>
             </ul> 
+            <div class="progress-container">
+                <div class="progress-bar" id="progressBar"></div>
+            </div>
         </nav>
     </header>
 
