Added parallax effect container

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
                 </div>
 
 
+                <div class="parallax-container"> </div>
+
+
                 <div class="image-container">
                     <a href="https://cse.ucsd.edu/" target="_blank">
                         <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" />
