Added second parallax image

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
 
 
-                <div class="parallax-container"> </div>
+                <div class="parallax-container parallax-container-1"> </div>
 
 
                 <div class="image-container">
@@ -410,6 +410,7 @@
                     </a>
                 </div>
 
+                <div class="parallax-container parallax-container-2"> </div>
 
             </div>
         </section>
