Added tilt-card effect to some images on the site

--- a/index.html
+++ b/index.html
@@ -378,8 +378,10 @@
                     </p>
                 </div>
 
-                <div class="image-container">
-                    <img src="./images/ps5.png" alt="Playstation 5" />
+                <div class="tilt-card-container">
+                    <div class="tilt-card image-container">
+                        <img src="./images/ps5.png" alt="Playstation 5" />
+                    </div>
                 </div>
 
                 <div class="image-container">
@@ -404,10 +406,12 @@
                     </p>
                 </div>
 
-                <div class="image-container">
-                    <a href="https://github.com/aahurtado/my_website" target="_blank">
-                        <img src="./images/my_website_github.png" alt="Picture of this website" />
-                    </a>
+                <div class="tilt-card-container">
+                    <div class="tilt-card image-container">
+                        <a href="https://github.com/aahurtado/my_website" target="_blank">
+                            <img src="./images/my_website_github.png" alt="Picture of this website" />
+                        </a>
+                    </div>
                 </div>
 
                 <div class="parallax-container parallax-container-2"> </div>
