Wrote the text for Epsilon section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 
                 <p>
-                    I worked for Centene Corporation, a Fortune 500 company that provides healthcare solutions to individuals and families. I was a full-time software engineer and was later promoted to be a senior software engineer for excellent programming, engineering, and collaboration performance. I was a primary member of the backend healthcare analytics engine team that developed and certified measures (including HEDIS, AMP, CMS, Risk Adjustment, and custom) for a large-scale production system that generated alerts for 10 million members daily.
+                    I worked for <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">Centene Corporation</a>, a Fortune 500 company that provides healthcare solutions to individuals and families. I was a full-time software engineer and was later promoted to be a senior software engineer for excellent programming, engineering, and collaboration performance. I was a primary member of the backend healthcare analytics engine team that developed and certified measures (including HEDIS, AMP, CMS, Risk Adjustment, and custom) for a large-scale production system that generated alerts for 10 million members daily.
                 </p>
 
                 <h5>Key Technologies Used:</h5>
@@ -233,13 +233,13 @@
                     <li> Clang </li>
                 </ul>
 
-                <h5>What are <a href="https://www.ncqa.org/hedis/" target="_blank">HEDIS</a> measures?</h5>
+                <h5>What are <a href="https://www.ncqa.org/hedis/" target="_blank" rel="noopener noreferrer">HEDIS</a> measures?</h5>
                 <p>
                     HEDIS measures are a set of standardized metrics used to evaluate the quality of healthcare services. They are used by healthcare organizations to monitor and improve the quality of care they provide. It's a gold standard in healthcare performance measurement, used by over 90% of health plans in the US.
                 </p>
 
                 <p>
-                    HEDIS measures are created and managed by the <a href="https://www.ncqa.org/" target="_blank">National Committee for Quality Assurance</a> (NCQA). NCQA is an independent nonprofit organization in the United States that works to improve health care quality through the administration of evidence-based standards, measures, programs, and accreditation. HEDIS includes over 90 clinical measures across six domains: effectiveness, access, experience, utilization, descriptive information, and electronic systems. HEDIS data is collected through surveys, medical charts and insurance claims for hospitalizations, medical office visits and procedures. 
+                    HEDIS measures are created and managed by the <a href="https://www.ncqa.org/" target="_blank" rel="noopener noreferrer">National Committee for Quality Assurance</a> (NCQA). NCQA is an independent nonprofit organization in the United States that works to improve health care quality through the administration of evidence-based standards, measures, programs, and accreditation. HEDIS includes over 90 clinical measures across six domains: effectiveness, access, experience, utilization, descriptive information, and electronic systems. HEDIS data is collected through surveys, medical charts and insurance claims for hospitalizations, medical office visits and procedures. 
                 </p>
 
                 <p>
@@ -288,29 +288,23 @@
 
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
+                    My first professional job was at <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">Epsilon Systems Solutions, Inc.</a> Epsilon Systems is a small National Defense contractor that provides total life-cycle support to defense systems such as research, analysis, system architecture, engineering, software development, assembly and testing, operational support, and maintenance and logistics. During my time here I worked as a full-time software engineer for the Navy SSDS program.
                 </p>
+
+
+                <h5>What is <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS?</a></h5>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
+                    SSDS is the command and control system aboard amphibious ships and aircraft carriers. The Ship Self-Defense System (SSDS) is a combat system specifically designed for anti-air defense of aircraft carriers. Navy commanders depend on SSDS to effectively integrate their ship’s sensors and weapon systems to enable the timely engagement of the diverse spectrum of air threats to the ship.
+                </p>
+
+                <p>
+                    The SSDS program runs on a ten year contract basis. At the time of my employment, the program was under the <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">Raytheon Company</a> (now known as RTX Corporation). My co-workers and I worked as sub-contractors for Raytheon alongside their employees to develop and maintain the software for the SSDS program.
                 </p>
 
 
-                <ul>
-                    <li>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
-                    </li>
-                    <li>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
-                    </li>
-                </ul>
-                
-                
                 <div class="text-container large-gap">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
+                        As a software engineer, I contributed to all phases of the Software Development Life Cycle: planning, design, software development, testing, and maintenance. I developed code (C++) for the SSDS program on a Linux platform. While working on the project we used an Agile/Scrum development process. 
                     </p>
                 </div>
 
